Fixed some UI bugs

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
       <!-- Chart Section (Hidden by default) -->
       <div id="chartContainer" class="hidden">
-        <h2 class="text-xl font-semibold mb-2 mt-6">📈 Response Time Chart</h2>
+        <h2 class="text-xl font-semibold mb-2 mt-6">Response Time Chart</h2>
         <canvas id="historyChart" class="w-full h-64"></canvas>
       </div>
     </div>
