--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,16 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body class="bg-gray-100 text-gray-800">
-    <nav class="bg-white shadow-md mb-6">
-      <div class="max-w-xl mx-auto px-4 py-4">
-        <div class="flex justify-between items-center">
-          <h1 class="text-xl font-bold text-blue-600">URL Health Checker</h1>
-          <div class="space-x-4">
-            <a href="/" class="text-blue-600 font-semibold">Dashboard</a>
-            <a href="/history.html" class="text-gray-600 hover:text-blue-600"
-              >History</a
-            >
-          </div>
-        </div>
+    <nav
+      class="bg-white shadow mb-6 px-4 py-3 flex justify-between items-center"
+    >
+      <h1 class="text-lg font-semibold text-blue-600">URL Health Checker</h1>
+      <div class="space-x-4 text-sm">
+        <a href="/" class="text-gray-600 hover:text-blue-600">Dashboard</a>
+        <a href="/history.html" class="text-blue-600 font-medium">History</a>
       </div>
     </nav>
+
     <div class="max-w-xl mx-auto bg-white rounded-xl shadow-lg p-8">
       <h1 class="text-2xl font-bold mb-6 text-center">URL Health Checker</h1>
       <div class="mb-8">
@@ -287,7 +284,9 @@
             document.getElementById("monitoringResult").innerHTML = `
                 <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded">
                   <p><strong>Success!</strong></p>
-                  <p>Monitoring ${result.url} every ${result.checkInterval} minutes</p>
+                  <p>Monitoring ${result.url} every ${
+              result.checkInterval
+            } minutes</p>
                   ${
                     payload.responseTimeThreshold
                       ? `<p class="text-sm">Alert threshold: ${payload.responseTimeThreshold}ms</p>`
@@ -342,9 +341,9 @@
                           Check every ${url.checkInterval}m • 
                           <span class="text-${statusColor}-600 font-medium">${statusText}</span>
                           ${
-                             url.consecutiveFailures > 0
-                               ? ` (${url.consecutiveFailures} failures)`
-                               : ""
+                            url.consecutiveFailures > 0
+                              ? ` (${url.consecutiveFailures} failures)`
+                              : ""
                           }
                           ${
                             url.responseTimeThreshold
